fix(field): :lipstick: fix broken invalid styling for `ds-input` inside `Field` (#3049)
Just fixing this one off, but we should have a closer look at other
components for this use-case.

- `ds-input` should probably be updated to use less re-assignments for
variants
- split use of `border` into the 3 separate CSS props

--- a/packages/css/src/field.css
+++ b/packages/css/src/field.css
@@ -87,7 +87,8 @@
  * Affix
  */
 .ds-field-affixes {
-  --dsc-field-affix-border: 1px solid;
+  --dsc-field-affix-border-width: 1px;
+  --dsc-field-affix-border-style: solid;
   --dsc-field-affix-border-color: var(--ds-color-neutral-border-default);
   --dsc-field-affix-padding-inline: var(--ds-size-4);
 
@@ -108,7 +109,8 @@
 
   & .ds-field-affix {
     align-items: center;
-    border: var(--dsc-field-affix-border);
+    border-width: var(--dsc-field-affix-border-width);
+    border-style: var(--dsc-field-affix-border-style);
     border-color: var(--dsc-field-affix-border-color);
     flex-shrink: 0;
     padding-inline: var(--dsc-field-affix-padding-inline);
@@ -131,8 +133,8 @@
   }
 
   & .ds-input {
-    border: var(--dsc-field-affix-border);
-    border-color: var(--dsc-field-affix-border-color);
+    border-width: var(--dsc-field-affix-border-width);
+    border-style: var(--dsc-field-affix-border-style);
     flex: 1 1 auto;
 
     /* if it has affix after */
